<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_about"
        android:visible="false"/>
    <item
        android:id="@+id/action_description"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_description"
        android:visible="false"/>
    <item
        android:id="@+id/action_location"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_locating"
        android:visible="false"/>
    <item
        android:id="@+id/action_bookmarks"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_bookmarks"
        android:visible="false"/>
    <item
        android:id="@+id/action_layers"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_layers"
        android:visible="false"/>
    <item
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_connect"
        android:visible="false"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_settings"
        android:visible="false"/>

</menu>