<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="250dp" >

    <FrameLayout
        android:id="@+id/new_folder_title_bar"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/new_folder_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:ellipsize="end"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:text="@string/add_new_folde"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textIsSelectable="false" />

        <ImageView
            android:id="@+id/new_folder_close_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="right"
            android:clickable="true"
            android:contentDescription="@string/image_description"
            android:padding="4dp"
            android:src="@drawable/close_icon_white" />
    </FrameLayout>

    <EditText
        android:id="@+id/new_folder_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_folder_title_bar"
        android:layout_marginTop="10dp"
        android:hint="@string/new_folde_name_hint"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_folder_name"
        android:gravity="right|center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/new_folder_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/new_folde_cancel" />

        <Button
            android:id="@+id/new_folder_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:text="@string/new_folde_enter" />
    </LinearLayout>

</RelativeLayout>