<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="300dp"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/login_progress_bar"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_loading"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/login_title_bar"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:ellipsize="end"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:text="@string/login_login"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textIsSelectable="false" />

        <ImageView
            android:id="@+id/login_close_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="right"
            android:clickable="true"
            android:contentDescription="@string/image_description"
            android:padding="4dp"
            android:src="@drawable/close_icon_white" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/login_control"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/login_username"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:text="@string/login_login" />
    </LinearLayout>

</LinearLayout>