<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/long_click_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:text="@string/long_click_title_hint"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

    <RadioGroup
        android:id="@+id/long_click_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/long_click_dialog_title"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/long_click_move_rb"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/long_click_move"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/long_click_move_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/long_click_delete_rb"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/long_click_delete"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/long_click_delete_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:textSize="24sp" />
        </LinearLayout>
    </RadioGroup>

    <LinearLayout
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/long_click_radio_group"
        android:gravity="right|center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/long_click_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/long_click_cancel" />

        <Button
            android:id="@+id/long_click_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:text="@string/long_click_enter" />
    </LinearLayout>

</RelativeLayout>